Some updates for correct working

--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -137,8 +137,10 @@
                 <h1 class="fw-light">SeeMore</h1>
                 <p>We greetings you on our website with content!
                     {% if user.is_authenticated and not user.is_subscribed %}
-                        Enjoy and <p><a type="button" class="btn btn-link"
-                                   href="{% url 'content:content_create' %}">SUBSCRIBE</a></p>
+                        Enjoy and <p>
+                        <a type="button" class="btn btn-link"
+                                   href="{% url 'users:subscription' %}">SUBSCRIBE</a>
+                    </p>
                         to <strong>SEE MORE</strong>!
                     {% else %}
                         Joying us to <strong>SEE MORE</strong> interesting things!
@@ -147,13 +149,13 @@
             </div>
         </div>
     </section>
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h3 class="fw-light">{{ title }}</h3>
-            </div>
-        </div>
-    </section>
+{#    <section class="py-5 text-center container">#}
+{#        <div class="row py-lg-5">#}
+{#            <div class="col-lg-6 col-md-8 mx-auto">#}
+{#                <h3 class="fw-light">{{ title }}</h3>#}
+{#            </div>#}
+{#        </div>#}
+{#    </section>#}
 
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
