--- a/content/templates/content/content_list.html
+++ b/content/templates/content/content_list.html
@@ -33,7 +33,7 @@
                                             <a type="button" class="btn btn-sm btn-outline-secondary"
                                                href="{% url 'content:content_detail' object.pk %}">See more</a>
                                             <a type="button" class="btn btn-sm btn-outline-secondary"
-                                               href="{% url 'content:home' object.pk %}">Back to home page</a>
+                                               href="{% url 'content:home' %}">Back to home page</a>
                                         </div>
                                     </div>
                                 </div>
