--- a/content/templates/content/includes/inc_base_main_menu.html
+++ b/content/templates/content/includes/inc_base_main_menu.html
@@ -1,26 +1,26 @@
 <div class="col-sm-4 offset-md-1 py-4">
     <h4>Main Menu</h4>
     <ul class="list-unstyled">
-        <li><a href="{% url 'content:content_list' %}" class="text-white">All content</a></li>
-        <li><a href="{% url 'content:content_paid_list' %}" class="text-white">Paid content</a></li>
-        <li><a href="{% url 'content:content_free_list' %}" class="text-white">Free content</a></li>
-        <li><a href="{% url 'content:author_list' %}" class="text-white">Authors</a></li>
-        <li><a href="{% url 'content:home' %}" class="text-white">Home page</a></li>
+        <li><button onclick="window.location.href='{% url 'content:content_list' %}'" class="btn btn-link text-white">All content</button></li>
+        <li><button onclick="window.location.href='{% url 'content:content_paid_list' %}'" class="btn btn-link text-white">Paid content</button></li>
+        <li><button onclick="window.location.href='{% url 'content:content_free_list' %}'" class="btn btn-link text-white">Free content</button></li>
+        <li><button onclick="window.location.href='{% url 'content:author_list' %}'" class="btn btn-link text-white">Authors</button></li>
+        <li><button onclick="window.location.href='{% url 'content:home' %}'" class="btn btn-link text-white">Home page</button></li>
         {% if user.is_authenticated %}
-            <li><a href="{% url 'users:profile' %}" class="text-white">Profile</a></li>
-            <form method="post" action="{% url 'users:logout' %}">
-                {% csrf_token %}
-                <div class="d-inline">
+            <li><button onclick="window.location.href='{% url 'users:profile' %}'" class="btn btn-link text-white">Profile</button></li>
+            <li>
+                <form method="post" action="{% url 'users:logout' %}">
+                    {% csrf_token %}
                     <button class="btn btn-link text-danger" type="submit">Logout</button>
-                </div>
-            </form>
+                </form>
+            </li>
         {% else %}
-            <li><a href="{% url 'users:register' %}" class="text-white">Registration</a></li>
-            <li><a href="{% url 'users:login' %}" class="text-success">Login</a></li>
+            <li><button onclick="window.location.href='{% url 'users:register' %}'" class="btn btn-link text-white">Registration</button></li>
+            <li><button onclick="window.location.href='{% url 'users:login' %}'" class="btn btn-link text-success">Login</button></li>
         {% endif %}
         {% if user.is_authenticated and not user.is_subscribed %}
-            <li><a href="{% url 'users:subscription' %}" class="text-success">Subscribe to see more!</a></li>
+            <li><button onclick="window.location.href='{% url 'users:subscription' %}'" class="btn btn-link text-success">Subscribe to see more!</button></li>
         {% endif %}
-        <li><a href="{% url 'content:contacts_info' %}" class="text-warning">Our contacts</a></li>
+        <li><button onclick="window.location.href='{% url 'content:contacts_info' %}'" class="btn btn-link text-warning">Our contacts</button></li>
     </ul>
 </div>
