--- a/content/templates/content/report_success_create.html
+++ b/content/templates/content/report_success_create.html
@@ -6,15 +6,13 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-body text-center">
-                    <h1 class="card-title">You have successfully created your content!</h1>
+                    <h1 class="card-title">The report was successfully created!</h1>
                 </div>
                 <div class="card-footer text-center">
                     <a href="{% url 'content:home' %}" class="btn btn-primary btn-block">Go to home page and see more!</a>
-                    <a href="{% url 'content:content_create' %}" class="btn btn-success btn-block">Create new content</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
 {% endblock %}
-
