--- a/content/templates/content/report_list.html
+++ b/content/templates/content/report_list.html
@@ -4,32 +4,46 @@
 <div class="container mt-5">
     <div class="card">
         <div class="card-header">
-            <h1 class="mb-0">Reports</h1>
+            <h3 class="mb-0">Reports for Article: {{ content.category }} / {{ content.title }} / {{ content.author.nickname }}</h3>
         </div>
         <div class="card-body">
             {% for object in object_list %}
             <div class="card mb-3">
                 <div class="card-body">
-                    <p class="card-text">Report from: {{ report.user.full_name }}</p>D
-                    <p class="card-text">Created at: {{ report.created_at }}</p>D
-                    <p class="card-text">Title: {{ report.title }}</p>D
-                    <p class="card-text">Comment: {{ report.comment }}</p>
-                    {% if report.screenshots %}
-                        <div class="mt-3">
-                            <h5 class="card-title">Screenshots:</h5>
-                            {% for screenshot in report.screenshots.all %}
-                                <img src="{{ screenshot.url }}" alt="Screenshot" class="img-fluid">
-                            {% endfor %}
-                        </div>
-                    {% endif %}
+                    <p class="card-text">Report from {{ object.user.full_name }}</p>
+                    <p class="card-text">Created at: {{ object.created_at }}</p>
+                    <p class="card-text">Title: {{ object.title }}</p>
+                </div>
+                <div class="card-footer">
+                    <a href="{% url 'content:report_detail' object.pk %}" class="btn btn-secondary">Details</a>
                 </div>
             </div>
+            {% if not forloop.last %}
+            <hr>
+            {% endif %}
             {% empty %}
             <p class="text-muted">No reports found.</p>
             {% endfor %}
         </div>
         <div class="card-footer">
             <a href="#" onclick="history.back()" class="btn btn-secondary">Back</a>
+        </div>
+    </div>
+</div>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-md-6">
+            <ul class="pagination">
+                {% if object_list.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page=1">&laquo; first</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ object_list.previous_page_number }}">previous</a></li>
+                {% endif %}
+                <li class="page-item disabled"><span class="page-link">Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}</span></li>
+                {% if object_list.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{ object_list.next_page_number }}">next</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ object_list.paginator.num_pages }}">last &raquo;</a></li>
+                {% endif %}
+            </ul>
         </div>
     </div>
 </div>
