--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -27,6 +27,9 @@
                             {% if not user.is_superuser and not user.is_staff %}
                                 <a href="{% url 'users:are_you_sure' %}" class="btn btn-danger">Delete account</a>
                             {% endif %}
+                            {% if user.is_authenticated and user.is_author %}
+                                <a href="{% url 'content:author_content' user.author.pk%}" class="btn btn-primary">My Content</a>
+                            {% endif %}
                         </div>
                     </div>
                 </form>
