some cosmetic changes

--- a/content/templates/content/content_detail.html
+++ b/content/templates/content/content_detail.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="card-footer d-flex justify-content-center gap-3">
                         <a href="{% url 'content:home' %}" class="btn btn-primary">To home</a>
-                        <a href="{% url 'content:author_detail' author.pk %}" class="btn btn-info">Author</a>
+                        <a href="{% url 'content:author_detail' object.author.pk %}" class="btn btn-info">Author</a>
                         <a href="{% url 'content:report_create' content.pk %}" class="btn btn-danger">Report this content</a>
                         {% if user.is_superuser or user.is_staff %}
                             <a href="{% url 'content:report_list' object.pk%}" class="btn btn-info">Look at reports</a>
